Metric unit filter

--- a/AgriBook/AgriBook/index.html
+++ b/AgriBook/AgriBook/index.html
@@ -48,6 +48,7 @@
 
         <!-- Load filters -->
         <script src="app/filters/descriptionCutFilter.js"></script>
+        <script src="app/filters/weightUnits.js"></script>
 
         <!-- Load controllers -->
         <script src="app/controllers/indexController.js"></script>
